# autosubtitles

./: .env.template  .gitignore  LICENSE  audiotranscribe.py  cookies.py  download_and_transcribe.py  main.py  processYoutube.py  pyproject.toml  readcooikestatus.py  readme.md  test_download.py  test_transcript.py  test_translation.py  youtube_video_download.py
docs/: getcookies.md  result.md
prompt/: translation.md
tests/: test.py  test_transcript.py  test_translation.py
